--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -35,7 +35,10 @@
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
         <div class="flex items-center">
-            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+            <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
+                <a href="/" onclick="navigateToHomepage(event)">
+                    <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+                </a>
             <h1 class="text-xl font-bold ml-4">Farmer Dashboard</h1>
         </div>
         <div class="flex items-center">
@@ -56,7 +59,7 @@
                     </a>
                 </li>
                 <li class="mb-4">
-                    <a href="#add-product" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                    <a href="javascrpt:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="toggleAddProductForm()">
                         <span class="mr-2">➕</span> Add Product
                     </a>
                 </li>
@@ -75,6 +78,10 @@
                         <span class="mr-2">👤</span> Profile
                     </a>
                 </li>
+                <li class="mb-4">
+                    <button class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="logout()">
+                        <span class="mr-2">🚪</span> Logout
+                    </button>
             </ul>
         </aside>
 
@@ -102,6 +109,49 @@
                     </div>
                 </div>
             </section>
+              <!-- Add New Product Section -->
+        <div id="add-product" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
+            <div id="add-product-form" class="hidden">
+                <form id="create-product-form" onsubmit="handleFormSubmit(event, '/api/products', 'POST')" enctype="multipart/form-data">
+                    <input type="hidden" name="id">
+                    <div class="mb-4">
+                        <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" step="0.01" name="price" placeholder="Product Price" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <input type="file" name="image" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <select name="category" class="border p-2 w-full rounded" required>
+                            <option value="">Select Category</option>
+                            <option value="fruits">Fruits</option>
+                            <option value="vegetables">Vegetables</option>
+                            <option value="dairy">Dairy</option>
+                            <option value="meat">Meat</option>
+                        </select>
+                    </div>
+                    <div class="mb-4">
+                        <input type="checkbox" name="availability" class="mr-2"> Available
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
+                </form>
+            </div>
+            <div id="products-list">
+                <!-- Products will be loaded here dynamically -->
+            </div>
+        </div>
 
             <!-- Charts Section -->
             <section class="mb-8">
@@ -135,7 +185,6 @@
                                 <td class="px-6 py-4">50kg</td>
                                 <td class="px-6 py-4 text-green-500">Shipped</td>
                             </tr>
-                            <!-- Add more rows dynamically -->
                         </tbody>
                     </table>
                 </div>
@@ -143,7 +192,6 @@
         </main>
     </div>
 
-    <!-- Footer -->
     <footer class="fixed bottom-0 left-0 right-0 bg-white shadow-md text-center py-4">
         <p class="text-gray-600">&copy; 2025 PointaFam. All rights reserved.</p>
     </footer>
@@ -183,5 +231,6 @@
             }
         });
     </script>
+    <script src="/public/script/script.js"></script>
 </body>
 </html>
