--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Farmer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
@@ -29,16 +28,18 @@
             padding: 20px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
         <div class="flex items-center">
-            <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
-                <a href="/" onclick="navigateToHomepage(event)">
-                    <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
-                </a>
+            <a href="/" onclick="navigateToHomepage(event)">
+                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+            </a>
             <h1 class="text-xl font-bold ml-4">Farmer Dashboard</h1>
         </div>
         <div class="flex items-center">
@@ -51,7 +52,6 @@
     <div class="flex mt-16">
         <!-- Sidebar -->
         <aside class="sidebar w-64 bg-white h-screen p-6 shadow-md">
-            <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
                 <li class="mb-4">
                     <a href="#overview" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
@@ -59,7 +59,7 @@
                     </a>
                 </li>
                 <li class="mb-4">
-                    <a href="javascrpt:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="toggleAddProductForm()">
+                    <a href="javascript:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="toggleAddProductForm()">
                         <span class="mr-2">➕</span> Add Product
                     </a>
                 </li>
@@ -74,7 +74,7 @@
                     </a>
                 </li>
                 <li class="mb-4">
-                    <a href="#profile" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                    <a href="javascript:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="showSection('profile')">
                         <span class="mr-2">👤</span> Profile
                     </a>
                 </li>
@@ -109,49 +109,50 @@
                     </div>
                 </div>
             </section>
-              <!-- Add New Product Section -->
-        <div id="add-product" class="mb-6">
-            <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
-            <div id="add-product-form" class="hidden">
-                <form id="create-product-form" onsubmit="handleFormSubmit(event, '/api/products', 'POST')" enctype="multipart/form-data">
-                    <input type="hidden" name="id">
-                    <div class="mb-4">
-                        <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <input type="number" step="0.01" name="price" placeholder="Product Price" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded" required>
-                    </div>
-                    <div class="mb-4">
-                        <input type="file" name="image" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <select name="category" class="border p-2 w-full rounded" required>
-                            <option value="">Select Category</option>
-                            <option value="fruits">Fruits</option>
-                            <option value="vegetables">Vegetables</option>
-                            <option value="dairy">Dairy</option>
-                            <option value="meat">Meat</option>
-                        </select>
-                    </div>
-                    <div class="mb-4">
-                        <input type="checkbox" name="availability" class="mr-2"> Available
-                    </div>
-                    <div class="mb-4">
-                        <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
-                </form>
+
+            <!-- Add New Product Section -->
+            <div id="add-product" class="mb-6">
+                <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
+                <div id="add-product-form" class="hidden">
+                    <form id="create-product-form" onsubmit="handleFormSubmit(event, '/api/products', 'POST')" enctype="multipart/form-data">
+                        <input type="hidden" name="id">
+                        <div class="mb-4">
+                            <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded" required>
+                        </div>
+                        <div class="mb-4">
+                            <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
+                        </div>
+                        <div class="mb-4">
+                            <input type="number" step="0.01" name="price" placeholder="Product Price" class="border p-2 w-full rounded" required>
+                        </div>
+                        <div class="mb-4">
+                            <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded" required>
+                        </div>
+                        <div class="mb-4">
+                            <input type="file" name="image" class="border p-2 w-full rounded">
+                        </div>
+                        <div class="mb-4">
+                            <select name="category" class="border p-2 w-full rounded" required>
+                                <option value="">Select Category</option>
+                                <option value="fruits">Fruits</option>
+                                <option value="vegetables">Vegetables</option>
+                                <option value="dairy">Dairy</option>
+                                <option value="meat">Meat</option>
+                            </select>
+                        </div>
+                        <div class="mb-4">
+                            <input type="checkbox" name="availability" class="mr-2"> Available
+                        </div>
+                        <div class="mb-4">
+                            <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
+                        </div>
+                        <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
+                    </form>
+                </div>
+                <div id="products-list">
+                    <!-- Products will be loaded here dynamically -->
+                </div>
             </div>
-            <div id="products-list">
-                <!-- Products will be loaded here dynamically -->
-            </div>
-        </div>
 
             <!-- Charts Section -->
             <section class="mb-8">
@@ -188,6 +189,31 @@
                         </tbody>
                     </table>
                 </div>
+            </section>
+
+            <!-- Profile Section (Hidden by default) -->
+            <section id="profile" class="hidden mb-8">
+                <h2 class="text-2xl font-bold mb-6">Profile</h2>
+                <div id="user-info" class="mb-8">
+                    <p><strong>Username:</strong> <span id="user-username"></span></p>
+                    <p><strong>Email:</strong> <span id="user-email"></span></p>
+                    <p><strong>Location:</strong> <span id="user-location"></span></p>
+                </div>
+                <form id="profile-form" onsubmit="handleProfileUpdate(event)">
+                    <div class="mb-4">
+                        <label for="username" class="block text-gray-700">Username</label>
+                        <input type="text" id="username" name="username" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="email" class="block text-gray-700">Email</label>
+                        <input type="email" id="email" name="email" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="location" class="block text-gray-700">Location</label>
+                        <input type="text" id="location" name="location" class="border p-2 w-full rounded" required>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200">Update Profile</button>
+                </form>
             </section>
         </main>
     </div>
@@ -230,6 +256,97 @@
                 maintainAspectRatio: false,
             }
         });
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const token = localStorage.getItem('token');
+            const role = localStorage.getItem('role');
+
+            if (!token || role !== 'farmer') {
+                window.location.href = '/';
+            }
+
+            loadProducts();
+            loadUserProfile();
+        });
+
+        async function loadProducts() {
+            const response = await fetch('/api/products');
+            const products = await response.json();
+            const productsList = document.getElementById('products-list');
+            productsList.innerHTML = products.map(product => `
+                <div class="card bg-white p-6 rounded-lg shadow-md">
+                    <img src="${product.imageURL}" alt="${product.name}" class="w-full h-48 object-cover rounded-t-lg">
+                    <h3 class="text-lg font-semibold mt-4">${product.name}</h3>
+                    <p class="text-gray-600">${product.description}</p>
+                    <p class="text-xl font-bold text-green-500">$${product.price.toFixed(2)}/kg</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded-lg mt-4 hover:bg-blue-600 transition duration-200" onclick="addToCart(${product.id})">Add to Cart</button>
+                </div>
+            `).join('');
+        }
+
+        async function loadUserProfile() {
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+            const response = await fetch(`/api/user/${userID}`, {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            });
+            if (response.ok) {
+                const user = await response.json();
+                document.getElementById('user-username').innerText = user.username;
+                document.getElementById('user-email').innerText = user.email;
+                document.getElementById('user-location').innerText = user.location;
+                document.getElementById('username').value = user.username;
+                document.getElementById('email').value = user.email;
+                document.getElementById('location').value = user.location;
+            } else {
+                alert('Error loading profile. Please try again later.');
+            }
+        }
+
+        async function handleProfileUpdate(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+
+            const response = await fetch(`/api/user/${userID}`, {
+                method: 'PUT',
+                headers: {
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(Object.fromEntries(formData))
+            });
+
+            if (response.ok) {
+                alert('Profile updated successfully');
+                loadUserProfile();
+            } else {
+                const error = await response.json();
+                alert(`Error: ${error.message}`);
+            }
+        }
+
+        
+            function showSection(sectionId) {
+            document.getElementById('profile').classList.add('hidden');
+            document.getElementById(sectionId).classList.remove('hidden');
+        }
+
+        function toggleAddProductForm() {
+            const form = document.getElementById('add-product-form');
+            form.classList.toggle('hidden');
+        }
+
+        function logout() {
+            localStorage.removeItem('userID');
+            localStorage.removeItem('token');
+            localStorage.removeItem('role');
+            window.location.href = '/login';
+        }
     </script>
     <script src="/public/script/script.js"></script>
 </body>
