--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Retailer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
@@ -50,22 +49,26 @@
         .overlay.active {
             display: block;
         }
+        .hidden {
+            display: none;
+        }
     </style>
 </head>
 <body class="bg-gray-50">
     <!-- Header -->
     <header class="fixed top-0 left-0 right-0 z-10 bg-white shadow-md flex items-center justify-between px-6 py-4">
         <div class="flex items-center">
-            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+            <a href="/">
+                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-10">
+            </a>
             <h1 class="text-xl font-bold ml-4">Retailer Dashboard</h1>
         </div>
         <div class="flex items-center">
             <button class="bg-blue-500 text-white px-4 py-2 rounded-lg hover:bg-blue-600 transition duration-200">Notifications</button>
             <div class="relative ml-4 cursor-pointer" onclick="toggleCart()">
                 <i class="fas fa-shopping-cart text-2xl text-gray-700"></i>
-                <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">3</span>
+                <span id="cart-count" class="absolute top-0 right-0 bg-red-500 text-white text-xs rounded-full px-1">0</span>
             </div>
-            <img src="https://via.placeholder.com/40" alt="Profile" class="w-10 h-10 rounded-full ml-4 cursor-pointer">
         </div>
     </header>
 
@@ -75,53 +78,34 @@
             <h2 class="text-2xl font-bold mb-6">My Cart</h2>
             <div id="cart-items" class="space-y-4">
                 <!-- Cart items will be loaded here dynamically -->
-                <div class="cart-item flex items-center justify-between">
-                    <div>
-                        <h3 class="text-lg font-semibold">Organic Tomatoes</h3>
-                        <p class="text-gray-600">$5.99/kg</p>
-                    </div>
-                    <div class="flex items-center">
-                        <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600 transition duration-200" onclick="removeItem(this)">Remove</button>
-                        <input type="number" value="1" min="1" class="w-16 ml-4 p-1 border border-gray-300 rounded" onchange="updateQuantity(this)">
-                    </div>
-                </div>
             </div>
+            <div id="cart-empty" class="text-center text-gray-600">Your cart is empty.</div>
             <div class="mt-6">
-                <p class="text-xl font-bold">Total: $<span id="cart-total">17.97</span></p>
-                <button class="bg-green-500 text-white px-4 py-2 rounded-lg mt-4 w-full hover:bg-green-600 transition duration-200">Checkout</button>
+                <p class="text-xl font-bold">Total: $<span id="cart-total">0.00</span></p>
+                <button class="bg-green-500 text-white px-4 py-2 rounded-lg mt-4 w-full hover:bg-green-600 transition duration-200" onclick="checkout()">Checkout</button>
             </div>
         </div>
     </div>
-
-    <!-- Overlay -->
     <div class="overlay" onclick="toggleCart()"></div>
 
-    <!-- Content -->
     <div class="flex mt-16">
         <!-- Sidebar -->
         <aside class="sidebar w-64 bg-white h-screen p-6 shadow-md">
-            <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
             <ul>
                 <li class="mb-4">
-                    <a href="#overview" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
-                        <span class="mr-2">📊</span> Overview
-                    </a>
-                </li>
-                <li class="mb-4">
-                    <a href="#products" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                    <a href="javascript:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="showSection('products')">
                         <span class="mr-2">📦</span> Products
                     </a>
                 </li>
                 <li class="mb-4">
-                    <a href="#profile" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200">
+                    <a href="javascript:void(0);" class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="showSection('profile')">
                         <span class="mr-2">👤</span> Profile
                     </a>
                 </li>
                 <li class="mb-4">
-                    <a href="#logout" class="flex items-center text-red-500 hover:text-red-600 transition duration-200">
+                    <button class="flex items-center text-gray-700 hover:text-blue-500 transition duration-200" onclick="logout()">
                         <span class="mr-2">🚪</span> Logout
-                    </a>
-                </li>
+                    </button>
             </ul>
         </aside>
 
@@ -130,87 +114,118 @@
             <!-- Products Section -->
             <section id="products" class="mb-8">
                 <h2 class="text-2xl font-bold mb-6">Available Products</h2>
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-                    <div class="card bg-white p-6 rounded-lg shadow-md">
-                        <h3 class="text-lg font-semibold">Organic Tomatoes</h3>
-                        <p class="text-gray-600">Fresh, organic tomatoes from local farms.</p>
-                        <p class="text-xl font-bold text-green-500">$5.99/kg</p>
-                        <button class="bg-blue-500 text-white px-4 py-2 rounded-lg mt-4 hover:bg-blue-600 transition duration-200" onclick="addToCart('Organic Tomatoes', 5.99)">Add to Cart</button>
-                    </div>
-                    <!-- Add more products dynamically -->
+                <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+                    <!-- Products will be loaded here dynamically -->
                 </div>
+            </section>
+
+            <!-- Profile Section (Hidden by default) -->
+            <section id="profile" class="hidden mb-8">
+                <h2 class="text-2xl font-bold mb-6">Profile</h2>
+                <div id="user-info" class="mb-8">
+                    <p><strong>Username:</strong> <span id="user-username"></span></p>
+                    <p><strong>Email:</strong> <span id="user-email"></span></p>
+                    <p><strong>Location:</strong> <span id="user-location"></span></p>
+                </div>
+                <form id="profile-form" onsubmit="handleProfileUpdate(event)">
+                    <div class="mb-4">
+                        <label for="username" class="block text-gray-700">Username</label>
+                        <input type="text" id="username" name="username" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="email" class="block text-gray-700">Email</label>
+                        <input type="email" id="email" name="email" class="border p-2 w-full rounded" required>
+                    </div>
+                    <div class="mb-4">
+                        <label for="location" class="block text-gray-700">Location</label>
+                        <input type="text" id="location" name="location" class="border p-2 w-full rounded" required>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 transition duration-200">Update Profile</button>
+                </form>
             </section>
         </main>
     </div>
-
+    <script src="/public/script/script.js"></script>
     <script>
-        // Cart Data
-        let cart = [
-            { name: 'Organic Tomatoes', price: 5.99, quantity: 3 }
-        ];
+        document.addEventListener('DOMContentLoaded', () => {
+            const token = localStorage.getItem('token');
+            const role = localStorage.getItem('role');
 
-        // Toggle Cart Page
-        function toggleCart() {
-            const cartPage = document.querySelector('.cart-page');
-            const overlay = document.querySelector('.overlay');
-            cartPage.classList.toggle('open');
-            overlay.classList.toggle('active');
-            updateCartDisplay();
+            if (!token || role !== 'retailer') {
+                window.location.href = '/login';
+            }
+
+            loadProducts();
+            loadCart();
+            loadUserProfile();
+        });
+
+        async function loadProducts() {
+            const response = await fetch('/api/products');
+            const products = await response.json();
+            const productsList = document.getElementById('products-list');
+            productsList.innerHTML = products.map(product => `
+                <div class="card bg-white p-6 rounded-lg shadow-md">
+                    <img src="${product.imageURL}" alt="${product.name}" class="w-full h-48 object-cover rounded-t-lg">
+                    <h3 class="text-lg font-semibold mt-4">${product.name}</h3>
+                    <p class="text-gray-600">${product.description}</p>
+                    <p class="text-xl font-bold text-green-500">$${product.price.toFixed(2)}/kg</p>
+                    <button class="bg-blue-500 text-white px-4 py-2 rounded-lg mt-4 hover:bg-blue-600 transition duration-200" onclick="addToCart(${product.id})">Add to Cart</button>
+                </div>
+            `).join('');
         }
 
-        // Update Cart Display
-        function updateCartDisplay() {
-            const cartItems = document.getElementById('cart-items');
-            const cartTotal = document.getElementById('cart-total');
-            const cartCount = document.getElementById('cart-count');
-            cartItems.innerHTML = '';
-            let total = 0;
+        async function loadUserProfile() {
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+            const response = await fetch(`/api/user/${userID}`, {
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            });
+            if (response.ok) {
+                const user = await response.json();
+                document.getElementById('user-username').innerText = user.username;
+                document.getElementById('user-email').innerText = user.email;
+                document.getElementById('user-location').innerText = user.location;
+                document.getElementById('username').value = user.username;
+                document.getElementById('email').value = user.email;  
+                document.getElementById('location').value = user.location;
+            } else {
+                alert('Error loading profile. Please try again later.');
+            }
+        }
 
-            cart.forEach((item, index) => {
-                total += item.price * item.quantity;
-                cartItems.innerHTML += `
-                    <div class="cart-item flex items-center justify-between">
-                        <div>
-                            <h3 class="text-lg font-semibold">${item.name}</h3>
-                            <p class="text-gray-600">$${item.price.toFixed(2)}/kg</p>
-                        </div>
-                        <div class="flex items-center">
-                            <button class="bg-red-500 text-white px-2 py-1 rounded-lg hover:bg-red-600 transition duration-200" onclick="removeItem(${index})">Remove</button>
-                            <input type="number" value="${item.quantity}" min="1" class="w-16 ml-4 p-1 border border-gray-300 rounded" onchange="updateQuantity(${index}, this)">
-                        </div>
-                    </div>
-                `;
+        async function handleProfileUpdate(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+
+            const response = await fetch(`/api/user/${userID}`, {
+                method: 'PUT',
+                headers: {
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(Object.fromEntries(formData))
             });
 
-            cartTotal.textContent = total.toFixed(2);
-            cartCount.textContent = cart.length;
-        }
-
-        // Add to Cart
-        function addToCart(name, price) {
-            const existingItem = cart.find(item => item.name === name);
-            if (existingItem) {
-                existingItem.quantity += 1;
+            if (response.ok) {
+                alert('Profile updated successfully');
+                loadUserProfile();
             } else {
-                cart.push({ name, price, quantity: 1 });
+                const error = await response.json();
+                alert(`Error: ${error.message}`);
             }
-            updateCartDisplay();
         }
 
-        // Remove Item
-        function removeItem(index) {
-            cart.splice(index, 1);
-            updateCartDisplay();
+        function showSection(sectionId) {
+            document.getElementById('products').classList.add('hidden');
+            document.getElementById('profile').classList.add('hidden');
+            document.getElementById(sectionId).classList.remove('hidden');
         }
-
-        // Update Quantity
-        function updateQuantity(index, input) {
-            cart[index].quantity = parseInt(input.value);
-            updateCartDisplay();
-        }
-
-        // Initialize Cart Display
-        updateCartDisplay();
     </script>
 </body>
 </html>
